{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 56,
  "lineage": "908258fe-9b92-2282-0b22-6d5a123518e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "172.31.0.0/16",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1917870932",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01b7bc85a61d92e70",
            "protocol": "udp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_network_acl.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "172.31.0.0/16",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2151792455",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01b7bc85a61d92e70",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_network_acl.test"
          ]
        }
      ]
    }
  ]
}